--- a/Artonia_v2/templates/registration/login.html
+++ b/Artonia_v2/templates/registration/login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="login-form-container">
-        <form class='form-group' method="post">
+    <div class="workshop-current-card">
+        <form class='workshop-form-fields' method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <div class="button-container">
