--- a/Artonia_v2/templates/registration/register.html
+++ b/Artonia_v2/templates/registration/register.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <form class="register-form-container" method="post">
+    <form class="workshop-current-card" method="post">
         {% csrf_token %}
-        <div class="form-group">
+        <div class="workshop-form-fields">
             {{ form }}
         </div>
         <div class="button-container">
