FIX: CSS fix in the profile details

--- a/Artonia_v2/templates/dashboard.html
+++ b/Artonia_v2/templates/dashboard.html
@@ -73,8 +73,8 @@
     <div class="dashboard-container">
 
         <div class="workshops-header">
-            <span><a href="{% url 'create_macrame' %}" class="create-button">Create New Macrame</a></span>
-            <span style="margin-left: 10px"><a href="{% url 'create-art-painting' %}" class="create-button">Create New Art Painting</a></span>
+            <span><a href="{% url 'create_macrame' %}" class="view-button">Create New Macrame</a></span>
+            <span style="margin-left: 10px"><a href="{% url 'create-art-painting' %}" class="view-button">Create New Art Painting</a></span>
         </div>
         {#        <h1 style="text-align: center; font-family: fantasy; font-weight: normal">My Dashboard</h1>#}
 
