--- a/Artonia_v2/templates/workshops/workshop_list.html
+++ b/Artonia_v2/templates/workshops/workshop_list.html
@@ -5,7 +5,7 @@
     <div class="workshops-header">
 
         {% if is_instructor %}
-            <span><a href="{% url 'workshop-create' %}" class="create-button">Create New Workshop</a></span>
+            <span><a href="{% url 'workshop-create' %}" class="view-button">Create New Workshop</a></span>
         {% endif %}
     </div>
     <h1 style="justify-self: center; font-family: fantasy; font-weight: normal">Available Workshops</h1>
