--- a/Artonia_v2/templates/registration/edit-account.html
+++ b/Artonia_v2/templates/registration/edit-account.html
@@ -4,15 +4,20 @@
     <main>
         <!-- Edit User's Profile Form -->
 
-        <section id="register">
-            <div class="form">
+        <section>
+            <div class="workshop-form-card">
                 <h2>Edit Profile</h2>
 
-                <form class="register-form" method="POST" action="">
+                <form class="workshop-form-fields" method="POST">
                     {% csrf_token %}
                     {{ form }}
                     <!-- form button -->
-                    <button type="submit">Edit</button>
+                    <div class="workshop-form-buttons">
+                        <button type="submit" style="text-decoration: none" href="{% url 'user_details' user.pk %}">Edit</button>
+                        <button type="submit" class="view-button" style="background-color: darkred"><a
+                                href="{% url 'user_details' request.user.pk %}" style="color: white">Cancel</a>
+                        </button>
+                    </div>
                 </form>
             </div>
         </section>
