Requirements file created

--- a/Artonia_v2/static/styles/workshops.css
+++ b/Artonia_v2/static/styles/workshops.css
@@ -269,6 +269,18 @@
     border-radius: 4px;
 }
 
+.creator-label {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: yellow;
+    color: black;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 4px;
+}
+
 .workshop-form-header {
     display: flex;
     justify-content: center;
