--- a/Artonia_v2/templates/dashboard.html
+++ b/Artonia_v2/templates/dashboard.html
@@ -1,71 +1,3 @@
-{#{% extends 'base.html' %}#}
-{##}
-{#{% block content %}#}
-{#    <main>#}
-{##}
-{#        <!-- Macrame Dashboard page -->#}
-{#        {% if macrames %}#}
-{#            <!-- Display a heading if there are macrames -->#}
-{#            <h2>{{ macrames.count }} Macrames in total</h2>#}
-{#        {% else %}#}
-{#            <!-- Display a heading if there are NO macrames -->#}
-{#            <h2>No Macrames yet.</h2>#}
-{#        {% endif %}#}
-{#        <section id="dashboard">#}
-{#            <!-- Display a div with information about each macrame (if any) -->#}
-{#            {% for macrame in macrames %}#}
-{#                <!-- first macrame -->#}
-{#the CSS class for post to be updated#}
-{#                <div class="post">#}
-{#                    <!-- post image -->#}
-{#                    <img#}
-{#                            src="{{ macrame.image_url }}"#}
-{#                            alt="My cool macrame img"#}
-{#                    />#}
-{#                    <!-- Macrame title -->#}
-{#                    <h3 class="title">{{ macrame.name }}</h3>#}
-{#                    <h3 class="title" style="color: #ffb700">$ {{ macrame.price }}</h3>#}
-{#                    <!-- macrame description -->#}
-{#                    <p class="description">{{ macrame.description|truncatewords:10 }}</p>#}
-{#                    <!-- post details button -->#}
-{#                    <a class="details-btn" href="{% url 'details_macrame' macrame.pk %}">See More</a>#}
-{#                </div>#}
-{#            {% endfor %}#}
-{#        </section>#}
-{##}
-{#        <!-- Art Paintings Dashboard page -->#}
-{#        {% if art_paint %}#}
-{#            <!-- Display a heading if there are Art Paintings -->#}
-{#            <h2>{{ art_paint.count }} Art Paintings in total</h2>#}
-{#        {% else %}#}
-{#            <!-- Display a heading if there are NO Art Paints -->#}
-{#            <h2>No Art Paintings yet.</h2>#}
-{#        {% endif %}#}
-{#        <section id="dashboard">#}
-{#            <!-- Display a div with information about each Art Painting (if any) -->#}
-{#            {% for art in art_paint %}#}
-{#                <!-- first art paintings -->#}
-{#the CSS class for post to be updated#}
-{#                <div class="post">#}
-{#                    <!-- art image -->#}
-{#                    <img#}
-{#                            src="{{ art.image_url }}"#}
-{#                            alt="My cool Art Painting img"#}
-{#                    />#}
-{#                    <!-- Art Painting title -->#}
-{#                    <h3 class="title">{{ art.name }}</h3>#}
-{#                    <h3 class="title" style="color: #ffb700">$ {{ art.price }}</h3>#}
-{#                    <!-- Art description -->#}
-{#                    <p class="description">{{ art.description|truncatewords:10 }}</p>#}
-{#                    <!-- Art details button -->#}
-{#                    <a class="details-btn" href="{% url 'details_art-painting' art.pk %}">See More</a>#}
-{#                </div>#}
-{#            {% endfor %}#}
-{#        </section>#}
-
-{#    </main>#}
-{#{% endblock %}#}
-
 {% extends 'base.html' %}
 
 {% block content %}
@@ -76,10 +8,10 @@
             <span><a href="{% url 'create_macrame' %}" class="view-button">Create New Macrame</a></span>
             <span style="margin-left: 10px"><a href="{% url 'create-art-painting' %}" class="view-button">Create New Art Painting</a></span>
         </div>
-        {#        <h1 style="text-align: center; font-family: fantasy; font-weight: normal">My Dashboard</h1>#}
-
         <section class="registered-workshops">
-            <h2 class="workshops-current-header">Workshops I'm Registered For</h2>
+            <div class="workshop-current-card" style="max-width: 700px; background: rgb(0,255,217, 0.1)">
+                <h2 class="workshops-current-header" style="color: #53773b;text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;">Workshops I'm Registered For</h2>
+            </div>
             {% if registered_workshops %}
                 <div class="workshops-grid">
                     {% for workshop in registered_workshops %}
@@ -109,8 +41,9 @@
 
         {% if macrames %}
             <section class="registered-workshops">
-                <h2 class="workshops-current-header">My Products</h2>
-
+                <div class="workshop-current-card" style="max-width: 700px; background: rgb(0,255,217, 0.1)">
+                    <h2 class="workshops-current-header" style="color: #53773b; text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;">My Products</h2>
+                </div>
                 {% if macrames %}
                     <div class="workshops-grid">
                         {% for macrame in macrames %}
