--- a/Artonia_v2/templates/macrame/delete-macrame.html
+++ b/Artonia_v2/templates/macrame/delete-macrame.html
@@ -3,15 +3,21 @@
 {% block content %}
     <main>
         <!-- Delete Macrame Form -->
-        <section id="edit">
-            <div class="form">
-                <h2>Delete Macrame</h2>
+        <section>
+            <div class="workshop-form-card">
+                <h2 class="workshop-form-header">Delete Macrame</h2>
 
-                <form class="edit-form" method="POST" action="">
+                <form class="workshop-form-fields" method="POST" action="">
                     {% csrf_token %}
                     {{ form }}
                     <!-- form button -->
-                    <button type="submit">Delete</button>
+                    <div class="workshop-form-buttons">
+                        <button type="submit">Delete</button>
+                        <button class="view-button" style="background-color: darkred"><a
+                                href="{% url 'dashboard' %}" style="color: white">Cancel</a>
+                        </button>
+                    </div>
+
                 </form>
             </div>
         </section>
