--- a/Artonia_v2/templates/macrame/edit-macrame.html
+++ b/Artonia_v2/templates/macrame/edit-macrame.html
@@ -4,18 +4,17 @@
     <main>
         <!-- Edit Macramé Form -->
         <section>
-            <div class="workshop-current-card">
-                <h2 class="workshops-current-header">Edit Macrame</h2>
+            <div class="workshop-form-card">
+                <h2 class="workshop-form-header">Edit Macrame</h2>
 
                 <form class="workshop-form-fields" method="POST" action="">
                     {% csrf_token %}
                     {{ form }}
                     <!-- form button -->
-                    <div class="workshop-form-buttons">
+                    <div class="workshop-buttons">
                         <button class="view-button" type="submit">Edit</button>
-                        <button type="submit" class="view-button" style="background-color: darkred"><a
-                                href="{% url 'details_macrame' macrame.pk%}" style="color: white">Cancel</a>
-                        </button>
+                        <a class="view-button" type="submit" style="background-color: darkred; margin: initial"
+                           href="{% url 'details_macrame' macrame.pk %}">Cancel</a>
                     </div>
                 </form>
             </div>
