--- a/Artonia_v2/templates/artwork/public_artwork_list.html
+++ b/Artonia_v2/templates/artwork/public_artwork_list.html
@@ -50,6 +50,8 @@
                                 <li>Price: ${{ art.price }}</li>
                             {% endif %}
                         </ul>
+                        <a href="{% url 'details_art-painting' art.pk %}" class="view-button">View
+                            Details</a>
                     </div>
                 </div>
             {% endfor %}
