--- a/Artonia_v2/templates/base.html
+++ b/Artonia_v2/templates/base.html
@@ -56,6 +56,8 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'like_script.js' %}"></script>
+
 </div>
 
 <!-- Footer -->
