--- a/Artonia_v2/templates/macrame/create-macrame.html
+++ b/Artonia_v2/templates/macrame/create-macrame.html
@@ -10,7 +10,7 @@
                     {{ form }}
                     {% csrf_token %}
                     <!-- form button -->
-                    <button type="submit" class="view-button">Publish</button>
+                    <button type="submit" class="view-button">Create</button>
                 </form>
             </div>
         </section>
